Add text command API menu and unique IDs for every client